--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Single Page Apps for GitHub Pages</title>
+    <title>The Julian Maz</title>
     <meta name="description" content="Lightweight solution for deploying single page apps with GitHub Pages. Code and concept by Rafael Pedicini.">
 
     <style>
@@ -49,6 +49,8 @@
     <link rel="manifest" href="http://favicon.rafrex.com/green-grid-144-168-192/manifest.json">
     <link rel="mask-icon" href="http://favicon.rafrex.com/green-grid-144-168-192/safari-pinned-tab.svg" color="#00a800">
     <link rel="shortcut icon" href="http://favicon.rafrex.com/green-grid-144-168-192/favicon.ico">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="msapplication-TileImage" content="http://favicon.rafrex.com/green-grid-144-168-192/mstile-144x144.png">
     <meta name="msapplication-config" content="http://favicon.rafrex.com/green-grid-144-168-192/browserconfig.xml">
@@ -91,6 +93,6 @@
   <body>
     <div id="root"></div>
     <!-- single page app in bundle.js -->
-    <script src="/build/bundle.js"></script>
+    <script src="thejulianmaz/build/bundle.js"></script>
   </body>
 </html>
