--- a/404.html
+++ b/404.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>The Julian Maz</title>
     <script type="text/javascript">
+      console.log("IS THIS HAPPENING")
       // Single Page Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
       // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
